fixed horizontal scroll bug

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -249,3 +249,6 @@ ins {
 .art-list{
 	margin-top:-4px !important;
 }
+.ng-scope{
+	padding: 15px
+}
